<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/permissions_list"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/permissions_list" >

        <menu >
            <item
                android:id="@+id/phone_state"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/request_phone_state"/>

            <item
                android:id="@+id/location"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/request_location"/>

            <item
                android:id="@+id/storage"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/request_storage"/>

            <item
                android:id="@+id/app_list"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/request_app_list"/>
            <item
                android:id="@+id/limit_personal_ad"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/limit_personal_ads"/>
        </menu>

    </item>
</menu>